--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -285,7 +285,15 @@
  // In tabs friends
  .block-friends {
      display: grid;
+     grid-template-columns: 1fr 1fr;
+     grid-template-rows: 1fr 1fr;
+     grid-gap: 2vw;
      width: 100%;
      height: 100%;
      background-color: #fff;
+     div {
+         height: 30px;
+         width: 39px;
+         background-color: #000;
+     }
  }
