--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -285,8 +285,8 @@
  // In tabs friends
  .block-friends {
      display: grid;
-     grid-template-columns: 1fr 1fr;
-     grid-template-rows: 1fr 1fr;
+     grid-template-columns: 1fr 1fr 1fr;
+     grid-template-rows: 1fr 1fr 1fr;
      grid-gap: 2vw;
      width: 100%;
      height: 100%;
