--- a/scss/profile.css
+++ b/scss/profile.css
@@ -328,6 +328,9 @@ body main .opportunuties {
   width: 100%;
   height: 100%;
   background-color: #fff;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .block-friends div {
