--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -291,6 +291,7 @@
      width: 100%;
      height: 100%;
      background-color: #fff;
+     justify-content: center;
      div {
          height: 30px;
          width: 39px;
