--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -294,11 +294,12 @@
          display: flex;
          width: 30%;
          height: 30%;
+         background-color: #fff;
          .circle-avatar {
              width: 150px;
              height: 150px;
              border-radius: 50%;
-             background-color: #fff;
+             background-color: #cfcfcf;
          }
      }
  }
