--- a/scss/profile.css
+++ b/scss/profile.css
@@ -320,10 +320,10 @@ body main .opportunuties {
 .block-friends {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
-  -ms-grid-rows: 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
   grid-gap: 2vw;
   width: 100%;
   height: 100%;
@@ -334,7 +334,7 @@ body main .opportunuties {
   display: -ms-flexbox;
   display: flex;
   width: 50%;
-  height: 30%;
+  height: 50%;
   background-color: #fff;
 }
 
