--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -285,15 +285,15 @@
  // In tabs friends
  .block-friends {
      display: grid;
-     grid-template-columns: 1fr 1fr 1fr;
-     grid-template-rows: 1fr 1fr 1fr;
+     grid-template-columns: 1fr 1fr;
+     grid-template-rows: 1fr 1fr;
      grid-gap: 2vw;
      width: 100%;
      height: 100%;
      .block-friend {
          display: flex;
          width: 50%;
-         height: 30%;
+         height: 50%;
          background-color: #fff;
          .circle-avatar {
              width: 150px;
