add wedth and height

--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -292,8 +292,8 @@
      height: 100%;
      .block-friend {
          display: flex;
-         width: 50%;
-         height: 50%;
+         height: 300px;
+         width: 300px;
          background-color: #fff;
          .circle-avatar {
              width: 150px;
