--- a/scss/profile.css
+++ b/scss/profile.css
@@ -333,8 +333,8 @@ body main .opportunuties {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 50%;
-  height: 50%;
+  height: 300px;
+  width: 300px;
   background-color: #fff;
 }
 
