--- a/scss/profile.css
+++ b/scss/profile.css
@@ -333,9 +333,17 @@ body main .opportunuties {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: 300px;
   width: 300px;
   background-color: #fff;
+  border-radius: 8px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .block-friends .block-friend .circle-avatar {
