--- a/scss/profile.css
+++ b/scss/profile.css
@@ -344,6 +344,9 @@ body main .opportunuties {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .block-friends .block-friend .circle-avatar {
