--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -298,6 +298,7 @@
          background-color: #fff;
          border-radius: 8px;
          justify-content: center;
+         align-items: center;
          .circle-avatar {
              width: 150px;
              height: 150px;
