--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -305,5 +305,9 @@
              border-radius: 50%;
              background-color: #cfcfcf;
          }
+         span {
+             font-family: 'Rubic';
+             color: #000;
+         }
      }
  }
