--- a/scss/profile.css
+++ b/scss/profile.css
@@ -357,7 +357,7 @@ body main .opportunuties {
 }
 
 .block-friends .block-friend span {
-  font-family: 'Rubic';
+  font-family: 'Rubik Mono One', sans-serif;
   color: #000;
 }
 /*# sourceMappingURL=profile.css.map */
