--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -306,7 +306,7 @@
              background-color: #cfcfcf;
          }
          span {
-             font-family: 'Rubic';
+             font-family: 'Rubik Mono One', sans-serif;
              color: #000;
          }
      }
