change font size to friend-name

--- a/scss/profile.css
+++ b/scss/profile.css
@@ -359,5 +359,6 @@ body main .opportunuties {
 .block-friends .block-friend span {
   font-family: 'Rubik Mono One', sans-serif;
   color: #000;
+  font-size: 14px;
 }
 /*# sourceMappingURL=profile.css.map */
