--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -308,6 +308,7 @@
          span {
              font-family: 'Rubik Mono One', sans-serif;
              color: #000;
+             font-size: 14px;
          }
      }
  }
