--- a/scss/profile.css
+++ b/scss/profile.css
@@ -347,6 +347,8 @@ body main .opportunuties {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-shadow: 1px 0 10px 3px #000;
+          box-shadow: 1px 0 10px 3px #000;
 }
 
 .block-friends .block-friend .circle-avatar {
