--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -299,6 +299,7 @@
          border-radius: 8px;
          justify-content: center;
          align-items: center;
+         box-shadow: 1px 0 10px 3px #000;
          .circle-avatar {
              width: 150px;
              height: 150px;
