add margun to span text

--- a/scss/profile.css
+++ b/scss/profile.css
@@ -359,6 +359,7 @@ body main .opportunuties {
 }
 
 .block-friends .block-friend span {
+  margin-top: 3%;
   font-family: 'Rubik Mono One', sans-serif;
   color: #000;
   font-size: 14px;
