--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -307,6 +307,7 @@
              background-color: #cfcfcf;
          }
          span {
+             margin-top: 3%;
              font-family: 'Rubik Mono One', sans-serif;
              color: #000;
              font-size: 14px;
