--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -180,7 +180,7 @@
  
  //Tab's profile opportunities
  .wrapper {
-     overflow: hidden;
+     //  overflow: hidden;
      height: 100%;
      width: 100%;
      display: flex;
