--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -181,6 +181,7 @@
  //Tab's profile opportunities
  .wrapper {
      //  overflow: hidden;
+     height: 100%;
      width: 100%;
      display: flex;
      flex-direction: column;
