--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -283,7 +283,7 @@
  
  // In tabs friends
  .block-friends {
-     overflow-y: scroll;
+     overflow: auto;
      display: grid;
      grid-template-columns: 1fr 1fr;
      grid-template-rows: 1fr 1fr;
