--- a/scss/profile.css
+++ b/scss/profile.css
@@ -317,7 +317,7 @@ body main .opportunuties {
 }
 
 .block-friends {
-  overflow-y: scroll;
+  overflow: auto;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
