add scrollbar-width: none

--- a/scss/profile.css
+++ b/scss/profile.css
@@ -318,6 +318,7 @@ body main .opportunuties {
 }
 
 .block-friends {
+  scrollbar-width: none;
   overflow: auto;
   display: -ms-grid;
   display: grid;
