--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -284,6 +284,7 @@
  
  // In tabs friends
  .block-friends {
+     scrollbar-width: none;
      overflow: auto;
      display: grid;
      grid-template-columns: 1fr 1fr;
