--- a/scss/profile.css
+++ b/scss/profile.css
@@ -213,7 +213,7 @@ body main .opportunuties {
   width: 15%;
   height: 100%;
   margin-top: -8px;
-  background: linear-gradient(135deg, #fcc274 0%, #eb48a1 100%);
+  background: linear-gradient(135deg, #ff8201 0%, #fe0b7f 100%);
 }
 
 .wrapper nav ul {
