--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -203,7 +203,7 @@
          width: 15%;
          height: 100%;
          margin-top: -8px;
-         background: linear-gradient(135deg, #fcc274 0%, #eb48a1 100%);
+         background: linear-gradient(135deg, #ff8201 0%, #fe0b7f 100%);
          ul {
              display: flex;
              flex-direction: column;
