add overflow yet

--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -235,6 +235,7 @@
          top: 4rem;
          margin-left: 10.4em;
          border-radius: 0 0 8px 0;
+         overflow: hidden;
          background: linear-gradient(135deg, #1c1a30 0%, #38335d 100%);
      }
      article {
