--- a/scss/profile.css
+++ b/scss/profile.css
@@ -258,6 +258,7 @@ body main .opportunuties {
   top: 4rem;
   margin-left: 10.4em;
   border-radius: 0 0 8px 0;
+  overflow: hidden;
   background: linear-gradient(135deg, #1c1a30 0%, #38335d 100%);
 }
 
