--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -276,6 +276,7 @@
              height: auto;
              color: #fff;
              h1 {
+                 position: relative;
                  font-size: 1.5rem;
                  margin: 0 0 2rem 0;
              }
