--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -304,11 +304,10 @@
          justify-content: center;
          align-items: center;
          box-shadow: 3px 0 18px 3px #000;
-         .circle-avatar {
+         .circle-avatar img {
              width: 150px;
              height: 150px;
              border-radius: 50%;
-             background-color: #cfcfcf;
          }
          span {
              margin-top: 3%;
