--- a/scss/profile.css
+++ b/scss/profile.css
@@ -355,11 +355,10 @@ body main .opportunuties {
           box-shadow: 3px 0 18px 3px #000;
 }
 
-.block-friends .block-friend .circle-avatar {
+.block-friends .block-friend .circle-avatar img {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  background-color: #cfcfcf;
 }
 
 .block-friends .block-friend span {
