--- a/scss/profile.css
+++ b/scss/profile.css
@@ -314,6 +314,7 @@ body main .opportunuties {
 }
 
 .wrapper article section h1 {
+  border: #fff 1px solid;
   position: relative;
   font-size: 1.5rem;
   margin: 0 0 2rem 0;
