--- a/scss/profile.css
+++ b/scss/profile.css
@@ -342,7 +342,7 @@ body main .opportunuties {
           flex-direction: column;
   height: 300px;
   width: 300px;
-  margin: 50px;
+  margin: 20px 30px 30px 30px;
   background-color: #fff;
   border-radius: 8px;
   -webkit-box-pack: center;
