--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -298,7 +298,7 @@
          flex-direction: column;
          height: 300px;
          width: 300px;
-         margin: 50px;
+         margin: 20px 30px 30px 30px;
          background-color: #fff;
          border-radius: 8px;
          justify-content: center;
