--- a/scss/profile.css
+++ b/scss/profile.css
@@ -256,6 +256,7 @@ body main .opportunuties {
   height: 100%;
   width: 85%;
   top: 4rem;
+  margin-top: 2px;
   margin-left: 10.4em;
   border-radius: 0 0 8px 0;
   overflow: hidden;
