--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -233,6 +233,7 @@
          height: 100%;
          width: 85%;
          top: 4rem;
+         margin-top: 2px;
          margin-left: 10.4em;
          border-radius: 0 0 8px 0;
          overflow: hidden;
