--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -311,10 +311,11 @@
              border-radius: 50%;
          }
          span {
-             margin-top: 3%;
+             margin-top: 5%;
              font-family: 'Rubik Mono One', sans-serif;
              color: #000;
-             font-size: 14px;
+             font-size: 16px;
+             letter-spacing: 2px;
          }
      }
  }
