--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -303,6 +303,7 @@
          border-radius: 8px;
          justify-content: center;
          align-items: center;
+         text-align: center;
          box-shadow: 3px 0 18px 3px #000;
          .circle-avatar img {
              width: 150px;
