--- a/scss/profile.css
+++ b/scss/profile.css
@@ -351,6 +351,7 @@ body main .opportunuties {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: center;
   -webkit-box-shadow: 3px 0 18px 3px #000;
           box-shadow: 3px 0 18px 3px #000;
 }
