--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -292,7 +292,7 @@
      grid-template-columns: 1fr 1fr;
      grid-template-rows: 1fr 1fr;
      width: 100%;
-     height: auto;
+     height: 200%;
      .block-friend {
          display: flex;
          flex-direction: column;
