--- a/scss/profile.css
+++ b/scss/profile.css
@@ -329,7 +329,7 @@ body main .opportunuties {
   -ms-grid-rows: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
   width: 100%;
-  height: auto;
+  height: 200%;
 }
 
 .block-friends .block-friend {
