--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -292,6 +292,7 @@
      grid-template-columns: 1fr 1fr;
      grid-template-rows: 1fr 1fr;
      width: 100%;
+     justify-content: center;
      height: 100%;
      .block-friend {
          display: flex;
