--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -286,7 +286,7 @@
  
  // In tabs friends
  .block-friends {
-     scrollbar-width: none;
+     //  scrollbar-width: none;
      overflow: auto;
      display: grid;
      grid-template-columns: 1fr 1fr;
