--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -287,7 +287,7 @@
  // In tabs friends
  .block-friends {
      //  scrollbar-width: none;
-     overflow: auto;
+     //  overflow: auto;
      display: grid;
      grid-template-columns: 1fr 1fr;
      grid-template-rows: 1fr 1fr;
