--- a/scss/profile.css
+++ b/scss/profile.css
@@ -320,6 +320,8 @@ body main .opportunuties {
 }
 
 .block-friends {
+  scrollbar-width: none;
+  overflow: auto;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
