--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -293,7 +293,7 @@
      grid-template-rows: 1fr 1fr;
      width: 100%;
      grid-gap: 1vw;
-     height: 3000px;
+     height: 150%;
      .block-friend {
          display: flex;
          flex-direction: column;
