--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -287,6 +287,8 @@
  // In tabs friends
  .block-friends {
      scrollbar-width: none;
+     -webkit-scrollbar-width: none;
+     -moz-scrollbar-width: none;
      overflow: auto;
      display: grid;
      grid-template-columns: 1fr 1fr;
