add block archivment

--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -319,3 +319,20 @@
          }
      }
  }
+ 
+ //  In tabs archivment
+ .block-archivment {
+     scrollbar-width: none;
+     overflow: auto;
+     display: grid;
+     grid-template-columns: 1fr 1fr 1fr;
+     grid-template-rows: 1fr 1fr 1fr;
+     width: 100%;
+     grid-gap: 1vw;
+     height: 80%;
+     .archivment {
+         height: 10%;
+         width: 30%;
+         background-color: #fff;
+     }
+ }
