--- a/scss/profile.css
+++ b/scss/profile.css
@@ -369,4 +369,24 @@ body main .opportunuties {
   font-size: 16px;
   letter-spacing: 2px;
 }
+
+.block-archivment {
+  scrollbar-width: none;
+  overflow: auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr;
+  width: 100%;
+  grid-gap: 1vw;
+  height: 80%;
+}
+
+.block-archivment .archivment {
+  height: 10%;
+  width: 30%;
+  background-color: #fff;
+}
 /*# sourceMappingURL=profile.css.map */
