--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -329,10 +329,10 @@
      grid-template-rows: 1fr 1fr 1fr;
      width: 100%;
      grid-gap: 1vw;
-     height: 80%;
+     height: 100%; //80%
      .archivment {
-         height: 10%;
-         width: 30%;
+         height: 30%;
+         width: 50%;
          background-color: #fff;
      }
  }
