--- a/scss/profile.css
+++ b/scss/profile.css
@@ -385,8 +385,23 @@ body main .opportunuties {
 }
 
 .block-archivment .archivment {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
   height: 40%;
   width: 100%;
+  border-radius: 7px;
   background-color: #fff;
+}
+
+.block-archivment .archivment .archivment-image {
+  position: absolute;
+  height: 50px;
+  width: 50px;
+  background-color: #cfcfcf;
 }
 /*# sourceMappingURL=profile.css.map */
