add style for circle-archivment

--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -341,7 +341,9 @@
          .archivment-image {
              position: absolute;
              height: 50px;
+             border-radius: 50%;
              width: 50px;
+             margin-left: 5%;
              background-color: #cfcfcf;
          }
      }
