--- a/scss/profile.css
+++ b/scss/profile.css
@@ -401,7 +401,9 @@ body main .opportunuties {
 .block-archivment .archivment .archivment-image {
   position: absolute;
   height: 50px;
+  border-radius: 50%;
   width: 50px;
+  margin-left: 5%;
   background-color: #cfcfcf;
 }
 /*# sourceMappingURL=profile.css.map */
