--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -199,7 +199,7 @@
          position: relative;
          font-size: 30px;
      }
-     nav {
+     #tab-list {
          width: 15%;
          height: 100%;
          margin-top: -8px;
@@ -345,6 +345,9 @@
              width: 50px;
              margin-left: 5%;
              background-color: #cfcfcf;
+         }
+         .archivment-title {
+             color: #000;
          }
      }
  }
