--- a/scss/profile.css
+++ b/scss/profile.css
@@ -407,7 +407,7 @@ body main .opportunuties {
   background-color: #cfcfcf;
 }
 
-.block-archivment .archivment .archivment-title {
+.block-archivment .archivment .archivment-info {
   color: #000;
 }
 /*# sourceMappingURL=profile.css.map */
