--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -346,7 +346,7 @@
              margin-left: 5%;
              background-color: #cfcfcf;
          }
-         .archivment-title {
+         .archivment-info {
              color: #000;
          }
      }
