--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -346,6 +346,8 @@
          }
          .archivment-info {
              color: #000;
+             margin-left: 5%;
+             text-align: center;
              .archivment-title {
                  font-family: 'Rubik Mono One', sans-serif;
              }
