--- a/scss/style.css
+++ b/scss/style.css
@@ -197,8 +197,7 @@ header .content .form .submit {
   margin-top: 20px;
   width: auto;
   height: 45px;
-  -webkit-transition: all 5s;
-  transition: all 5s;
+  transition: all .5s;
   font-size: 18px;
   padding: 5px;
   border: none;
@@ -213,6 +212,10 @@ header .content .form .submit {
   background: linear-gradient(90deg, #833ab4 0%, #fd1d1d 50%, #fcb045 100%);
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
+  -webkit-transition: all .5s;
+  -moz-transition: all .5s;
+  -ms-transition: all .5s;
+  -o-transition: all .5s;
 }
 
 header .content .form .submit:hover {
