--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -287,6 +287,9 @@
  // In tabs friends
  .block-friends {
      scrollbar-width: none;
+      ::-webkit-scrollbar-width {
+         scrollbar-width: none;
+     }
      overflow: auto;
      display: grid;
      grid-template-columns: 1fr 1fr;
