--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -173,7 +173,6 @@
      margin-left: 5%;
      height: auto;
      padding: 1.5rem;
-     font-family: 'Cairo', sans-serif;
      background: radial-gradient(50% 16%, circle, #c36fd4 32%, #332bab 88%);
      //linear-gradient(135deg, #c36fd4 0%,#332bab 100%); 
  }
@@ -183,6 +182,7 @@
      overflow: hidden;
      height: 100%;
      width: 100%;
+     -wekit-width: 100%;
      display: flex;
      flex-direction: column;
      border-radius: 8px;
@@ -201,7 +201,7 @@
      }
      #tab-list {
          width: 15%;
-         height: 100%;
+         height: 600px;
          margin-top: -8px;
          background: linear-gradient(135deg, #ff8201 0%, #fe0b7f 100%);
          ul {
