--- a/scss/profile.css
+++ b/scss/profile.css
@@ -321,7 +321,7 @@ body main .opportunuties {
 
 .block-friends {
   scrollbar-width: none;
-  overflow: scroll;
+  overflow-y: scroll;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
