--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -293,7 +293,7 @@
          background: transparent;
          /* Optional: just make scrollbar invisible */
      }
-     overflow: scroll;
+     overflow-y: scroll;
      display: grid;
      grid-template-columns: 1fr 1fr;
      grid-template-rows: 1fr 1fr;
