--- a/scss/profile.css
+++ b/scss/profile.css
@@ -334,10 +334,7 @@ body main .opportunuties {
 }
 
 .block-friends ::-webkit-scrollbar {
-  width: 0px;
-  /* Remove scrollbar space */
-  background: transparent;
-  /* Optional: just make scrollbar invisible */
+  width: none;
 }
 
 .block-friends .block-friend {
