add width shadow

--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -305,7 +305,7 @@
          align-items: center;
          text-align: center;
          box-shadow: 3px 0 10px 3px #000;
-         -webkit-box-shadow: 3px 0 10px 3px #000;
+         -webkit-box-shadow: 3px 3px 10px 3px #000;
          .circle-avatar img {
              width: 150px;
              height: 150px;
