--- a/scss/profile.css
+++ b/scss/profile.css
@@ -352,8 +352,8 @@ body main .opportunuties {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
-  box-shadow: 3px 0 10px 3px #000;
-  -webkit-box-shadow: 3px 3px 18px 3px #000;
+  box-shadow: 3px 3px 8px 3px #000;
+  -webkit-box-shadow: 3px 3px 8px 3px #000;
 }
 
 .block-friends .block-friend .circle-avatar img {
