--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -304,8 +304,8 @@
          justify-content: center;
          align-items: center;
          text-align: center;
-         box-shadow: 3px 0 10px 3px #000;
-         -webkit-box-shadow: 3px 3px 18px 3px #000;
+         box-shadow: 3px 3px 8px 3px #000;
+         -webkit-box-shadow: 3px 3px 8px 3px #000;
          .circle-avatar img {
              width: 150px;
              height: 150px;
