--- a/scss/profile.css
+++ b/scss/profile.css
@@ -329,6 +329,7 @@ body main .opportunuties {
   -ms-grid-rows: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
   width: 100%;
+  margin-left: 5%;
   grid-gap: 1vw;
   height: 80%;
 }
