--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -292,6 +292,7 @@
      grid-template-columns: 1fr 1fr;
      grid-template-rows: 1fr 1fr;
      width: 100%;
+     margin-left: 5%;
      grid-gap: 1vw;
      height: 80%;
      .block-friend {
